# drmenu

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml  mutants.toml
.github/actions/setup-system-deps/: action.yml
.github/workflows/: tests.yml
src/: app_state.rs  fuzzy.rs  lib.rs  main.rs  menu_entry.rs  stdin.rs  style.css  test_support.rs  ui.rs
tests/: gtk_integration.rs
