[package]
name = "drmenu"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
gdk4 = "0.10.0"
gdk4-wayland = "0.10.0"
glib = "0.21.1"
glib-macros = "0.21.0"
gtk4 = { version = "0.10.0", features = ["v4_12"] }
gtk4-layer-shell = "0.6.1"
fuzzy-muff = "0.4.8"
smol = "2.0.2"
tracing = "0.1.41"

[features]
gtk-tests = []
